@@ -1,6 +1,7 @@
 This file documents the revision history for the SNClient+ agent.
 
 next:
+         - support += operator in config files
          - create logfile folder unless it exists
          - update windows exporter to 0.25.1
             - i386 still uses 0.24 since thats the last supported version
